// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ContractorResourceForm component renders correctly 1`] = `
<Fragment>
  <TextField
    autoFocus={true}
    hint="Provide the name of the private contractor or vendor. For planned procurements, generalize by resource name. For example, Computer Resources/TBD."
    label="Private Contractor or Vender Name"
    labelClassName="full-width-label"
    name="contractor-name"
    onChange={[Function]}
    type="text"
    value="Honey Dipper Dan"
  />
  <TextArea
    hint="Explain the procurement process for the contractor and the scope of their work. Provide justification for any non-competitive procurements."
    label="Procurement Methodology and Description of Services"
    labelClassName="full-width-label"
    name="contractor-description"
    onChange={[Function]}
    rows={5}
    value="They cleaned up the latrines after the Battle of Hastings"
  />
  <FormLabel
    component="label"
  >
    Full Contract Term
  </FormLabel>
  <span
    className="ds-c-field__hint"
  >
    Provide the total length of the contract, including any option years. Contract term may extend beyond the FFY(s) included in this APD.
  </span>
  <div
    className="ds-c-choice__checkedChild ds-u-padding-y--0"
  >
    <DateField
      label="Contract start date"
      onChange={[Function]}
      value="1066-10-14"
    />
    <DateField
      hint=""
      label="Contract end date"
      onChange={[Function]}
      value="1066-10-15"
    />
  </div>
  <DollarField
    hint="Provide the total not to exceed amounts of the contract, including costs for the option years. This is not the amount you are requesting for the FFYs and will not be added to your FFY requests."
    label="Total Contract Cost"
    labelClassName="full-width-label"
    name="contractor-total-cost"
    onChange={[Function]}
    size="medium"
    value={12345}
  />
  <fieldset
    className="ds-c-fieldset"
  >
    <legend
      className="ds-c-label"
    >
      This is an hourly resource
    </legend>
    <ChoiceComponent
      checked={true}
      label="No"
      name="apd-activity-contractor-hourly-key 1-no"
      onChange={[Function]}
      type="radio"
      value="no"
    />
    <ChoiceComponent
      checked={false}
      checkedChildren={
        <div
          className="ds-c-choice__checkedChild"
        >
          <React.Fragment>
            <FormLabel
              component="label"
            >
              FFY 
              1066
            </FormLabel>
            <div
              className="ds-l-row ds-u-padding-left--2"
            >
              <NumberField
                fieldRef={null}
                label="Number of hours"
                labelClassName="ds-u-margin-top--1"
                mask={null}
                min={null}
                name="contractor-num-hours-ffy-1066"
                onBlur={null}
                onChange={[Function]}
                round={false}
                size="medium"
                value={10}
              />
              <DollarField
                className="ds-u-margin-left--1"
                label="Hourly rate"
                labelClassName="ds-u-margin-top--1"
                name="contractor-hourly-rate-ffy-1066"
                onChange={[Function]}
                size="medium"
                value={100}
              />
            </div>
          </React.Fragment>
          <React.Fragment>
            <FormLabel
              component="label"
            >
              FFY 
              1067
            </FormLabel>
            <div
              className="ds-l-row ds-u-padding-left--2"
            >
              <NumberField
                fieldRef={null}
                label="Number of hours"
                labelClassName="ds-u-margin-top--1"
                mask={null}
                min={null}
                name="contractor-num-hours-ffy-1067"
                onBlur={null}
                onChange={[Function]}
                round={false}
                size="medium"
                value={20}
              />
              <DollarField
                className="ds-u-margin-left--1"
                label="Hourly rate"
                labelClassName="ds-u-margin-top--1"
                name="contractor-hourly-rate-ffy-1067"
                onChange={[Function]}
                size="medium"
                value={200}
              />
            </div>
          </React.Fragment>
        </div>
      }
      label="Yes"
      name="apd-activity-contractor-hourly-key 1-yes"
      onChange={[Function]}
      type="radio"
      value="yes"
    />
  </fieldset>
  <DollarField
    disabled={false}
    key="1066"
    label="FFY 1066 Cost"
    name="contractor-cost-ffy-1066"
    onChange={[Function]}
    size="medium"
    value={300}
  />
  <DollarField
    disabled={false}
    key="1067"
    label="FFY 1067 Cost"
    name="contractor-cost-ffy-1067"
    onChange={[Function]}
    size="medium"
    value={400}
  />
</Fragment>
`;

exports[`the ContractorResourceForm component renders if use hourly data is selected 1`] = `
<Fragment>
  <TextField
    autoFocus={true}
    hint="Provide the name of the private contractor or vendor. For planned procurements, generalize by resource name. For example, Computer Resources/TBD."
    label="Private Contractor or Vender Name"
    labelClassName="full-width-label"
    name="contractor-name"
    onChange={[Function]}
    type="text"
    value="Honey Dipper Dan"
  />
  <TextArea
    hint="Explain the procurement process for the contractor and the scope of their work. Provide justification for any non-competitive procurements."
    label="Procurement Methodology and Description of Services"
    labelClassName="full-width-label"
    name="contractor-description"
    onChange={[Function]}
    rows={5}
    value="They cleaned up the latrines after the Battle of Hastings"
  />
  <FormLabel
    component="label"
  >
    Full Contract Term
  </FormLabel>
  <span
    className="ds-c-field__hint"
  >
    Provide the total length of the contract, including any option years. Contract term may extend beyond the FFY(s) included in this APD.
  </span>
  <div
    className="ds-c-choice__checkedChild ds-u-padding-y--0"
  >
    <DateField
      label="Contract start date"
      onChange={[Function]}
      value="1066-10-14"
    />
    <DateField
      hint=""
      label="Contract end date"
      onChange={[Function]}
      value="1066-10-15"
    />
  </div>
  <DollarField
    hint="Provide the total not to exceed amounts of the contract, including costs for the option years. This is not the amount you are requesting for the FFYs and will not be added to your FFY requests."
    label="Total Contract Cost"
    labelClassName="full-width-label"
    name="contractor-total-cost"
    onChange={[Function]}
    size="medium"
    value={12345}
  />
  <fieldset
    className="ds-c-fieldset"
  >
    <legend
      className="ds-c-label"
    >
      This is an hourly resource
    </legend>
    <ChoiceComponent
      checked={false}
      label="No"
      name="apd-activity-contractor-hourly-key 1-no"
      onChange={[Function]}
      type="radio"
      value="no"
    />
    <ChoiceComponent
      checked={true}
      checkedChildren={
        <div
          className="ds-c-choice__checkedChild"
        >
          <React.Fragment>
            <FormLabel
              component="label"
            >
              FFY 
              1066
            </FormLabel>
            <div
              className="ds-l-row ds-u-padding-left--2"
            >
              <NumberField
                fieldRef={null}
                label="Number of hours"
                labelClassName="ds-u-margin-top--1"
                mask={null}
                min={null}
                name="contractor-num-hours-ffy-1066"
                onBlur={null}
                onChange={[Function]}
                round={false}
                size="medium"
                value={10}
              />
              <DollarField
                className="ds-u-margin-left--1"
                label="Hourly rate"
                labelClassName="ds-u-margin-top--1"
                name="contractor-hourly-rate-ffy-1066"
                onChange={[Function]}
                size="medium"
                value={100}
              />
            </div>
          </React.Fragment>
          <React.Fragment>
            <FormLabel
              component="label"
            >
              FFY 
              1067
            </FormLabel>
            <div
              className="ds-l-row ds-u-padding-left--2"
            >
              <NumberField
                fieldRef={null}
                label="Number of hours"
                labelClassName="ds-u-margin-top--1"
                mask={null}
                min={null}
                name="contractor-num-hours-ffy-1067"
                onBlur={null}
                onChange={[Function]}
                round={false}
                size="medium"
                value={20}
              />
              <DollarField
                className="ds-u-margin-left--1"
                label="Hourly rate"
                labelClassName="ds-u-margin-top--1"
                name="contractor-hourly-rate-ffy-1067"
                onChange={[Function]}
                size="medium"
                value={200}
              />
            </div>
          </React.Fragment>
        </div>
      }
      label="Yes"
      name="apd-activity-contractor-hourly-key 1-yes"
      onChange={[Function]}
      type="radio"
      value="yes"
    />
  </fieldset>
  <p
    className="ds-u-margin-bottom--0"
  >
    <FormLabel
      component="label"
    >
      FFY 
      1066
       Cost
    </FormLabel>
    <Dollars>
      300
    </Dollars>
    <FormLabel
      component="label"
    >
      FFY 
      1067
       Cost
    </FormLabel>
    <Dollars>
      400
    </Dollars>
  </p>
</Fragment>
`;
